samples/_failures_safe/1761071461_e19800_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_365d1731.c: In function ‘main’:
./samples/SAFE/__tmp_365d1731.c:147:16: error: missing terminating " character
  147 |         printf("No valid log entries to analyze
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_365d1731.c:147:9: error: expected expression at end of input
  147 |         printf("No valid log entries to analyze
      |         ^~~~~~
./samples/SAFE/__tmp_365d1731.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_365d1731.c:147:9: error: expected declaration or statement at end of input
